--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js --ignore __tests__",
+    "pretest": "cross-env NODE_ENV=test sequelize db:migrate",
+    "test": "cross-env NODE_ENV=test jest",
+    "posttest": "cross-env NODE_ENV=test sequelize db:migrate:undo:all"
+  },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "factory-girl": "^5.0.4",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "sequelize": "^6.12.0"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.3.0"
+    "faker": "^5.5.3",
+    "jest": "^27.4.5",
+    "sequelize-cli": "^6.3.0",
+    "sqlite3": "^5.0.2",
+    "supertest": "^6.1.6"
   }
 }
